# fastapi_projetcts_template

./: .dockerignore  Dockerfile  README.md  alembic.ini  logging.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
core/abstract/: abstract_controller.py  abstract_model.py  abstract_repository.py  abstract_service.py
core/token/: token_service.py
core/user/: user_controller.py  user_model.py  user_repository.py  user_service.py
docker_commands/: command_docker_app.txt  command_docker_db.txt  command_docker_net.txt
middleware/: jwt_middleware.py
migrations/: env.py  script.py.mako
migrations/versions/: 4ea44e3c00b7_nova_revisão.py  84044a28f995_nova_revisão.py  ad365d2d7ca2_init_schema.py
tcc_rastreamento_back/: main.py
tcc_rastreamento_back/core/abstract/: abstract_controller.py  abstract_model.py  abstract_repository.py
tcc_rastreamento_back/core/user/: user_controller.py  user_model.py  user_repository.py  user_service.py
tcc_rastreamento_back/middleware/: jwt_middleware.py
tcc_rastreamento_back/utils/: app_profile.py  base.py  connection_pool.py  exception_model.py  exceptions.py  models.py  openapi_schema.py  response_model.py  security_tokens.py  settings.py  validations.py
utils/: app_enviroment.py  connection_pool.py  context_vars.py  contexts.py  custom_formatter.py  exceptions.py  filter_model.py  format.py  functions.py  logging_config.py  security.py  settings.py  transactions.py
